--- a/templates/email/base.html
+++ b/templates/email/base.html
@@ -95,7 +95,7 @@
                   <tr>
                     <td style="padding-top: 16px;"> 
                     <div style="font-size: 15px; line-height: 1.7; color: var(--text); font-family: 'Outfit', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif;">
-                        {{content_html}}
+                        {{content_html|safe}}
                       </div>
                     </td>
                   </tr>
