--- a/templates/email/base.html
+++ b/templates/email/base.html
@@ -99,7 +99,7 @@
       <!-- Logo centered, size per email_basic.html -->
       <div style="text-align:center; margin-bottom:20px;">
         <a href="https://cleanenroll.com" target="_blank" style="text-decoration:none;">
-          <img class="logo" src="https://cleanenroll.com/LogoCleanEnroll.png" width="160" alt="CleanEnroll" style="display:block; height:auto; border:0; outline:none; text-decoration:none; -ms-interpolation-mode:bicubic;" />
+          <img class="logo" src="https://cleanenroll.com/LogoCleanEnroll%20Light.svg" width="160" alt="CleanEnroll" style="display:block; height:auto; border:0; outline:none; text-decoration:none; -ms-interpolation-mode:bicubic;" />
         </a>
       </div>
 
