--- a/templates/email/notification.html
+++ b/templates/email/notification.html
@@ -30,7 +30,7 @@
       <!-- Logo -->
       <div style="text-align:center; margin-bottom:20px;">
         <a href="https://cleanenroll.com" target="_blank" style="text-decoration:none;">
-          <img class="logo" src="https://cleanenroll.com/LogoCleanEnroll.png" width="160" alt="CleanEnroll" style="display:block; height:auto; border:0; outline:none; text-decoration:none; -ms-interpolation-mode:bicubic; margin:0 auto;" />
+          <img class="logo" src="https://cleanenroll.com/LogoCleanEnroll%20Light.svg" width="160" alt="CleanEnroll" style="display:block; height:auto; border:0; outline:none; text-decoration:none; -ms-interpolation-mode:bicubic; margin:0 auto;" />
         </a>
       </div>
 
